<package>
  <name>rough_octomap</name>
  <version>0.6.4</version>
  <description>
    files for implementing RoughOctomap
  </description>
  <author>Mike Miles</author>
  <maintainer email="mike.miles@colorado.edu">Dan Riley</maintainer>
  <license>BSD</license>
  <url>https://github.com/dan-riley/marble_mapping</url>
  <url type="bugtracker">https://github.com/dan-riley/marble_mapping/issues</url>
  <url type="repository">https://github.com/dan-riley/marble_mapping</url>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml" />
  </export>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libqt5-core</build_depend>
  <build_depend>libqt5-widgets</build_depend>
  <build_depend>curvy_terrain_mapper</build_depend>
  <build_depend>stair_detection</build_depend>

 <run_depend>roscpp</run_depend>
 <run_depend>rviz</run_depend>
 <run_depend>visualization_msgs</run_depend>
 <run_depend>std_msgs</run_depend>
 <run_depend>std_srvs</run_depend>
 <run_depend>octomap</run_depend>
 <run_depend>octomap_msgs</run_depend>
 <run_depend>octomap_ros</run_depend>
 <run_depend>qtbase5-dev</run_depend>
 <run_depend>libqt5-core</run_depend>
 <run_depend>libqt5-widgets</run_depend>

</package>
